--- a/DXLearning/DXLearning.vcxproj.filters
+++ b/DXLearning/DXLearning.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="dx9.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="fps_counter.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="window.h">
@@ -33,6 +36,12 @@
       <Filter>header</Filter>
     </ClInclude>
     <ClInclude Include="dx9.h">
+      <Filter>header</Filter>
+    </ClInclude>
+    <ClInclude Include="fps_counter.h">
+      <Filter>header</Filter>
+    </ClInclude>
+    <ClInclude Include="type.h">
       <Filter>header</Filter>
     </ClInclude>
   </ItemGroup>
