--- a/DXLearning/DXLearning.vcxproj
+++ b/DXLearning/DXLearning.vcxproj
@@ -156,15 +156,19 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="dx9.cpp" />
-    <ClCompile Include="fps_counter.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Rehenz\fps_counter.cpp" />
+    <ClCompile Include="Rehenz\math.cpp" />
+    <ClCompile Include="Rehenz\noise_gen.cpp" />
     <ClCompile Include="window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="dx9.h" />
-    <ClInclude Include="fps_counter.h" />
     <ClInclude Include="input.h" />
-    <ClInclude Include="type.h" />
+    <ClInclude Include="Rehenz\fps_counter.h" />
+    <ClInclude Include="Rehenz\math.h" />
+    <ClInclude Include="Rehenz\noise_gen.h" />
+    <ClInclude Include="Rehenz\type.h" />
     <ClInclude Include="window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
