add color change shader; and phone light shader

--- a/DXLearning/DXLearning.vcxproj.filters
+++ b/DXLearning/DXLearning.vcxproj.filters
@@ -67,8 +67,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="vs_transform.hlsl">
-      <Filter>resource</Filter>
-    </FxCompile>
+    <FxCompile Include="vs_light.hlsl" />
+    <FxCompile Include="vs_transform.hlsl" />
   </ItemGroup>
 </Project>
