add `CBuffer` `Transform` `Projection`; and draw cube

--- a/dx11/dx11.vcxproj.filters
+++ b/dx11/dx11.vcxproj.filters
@@ -62,5 +62,11 @@
     <FxCompile Include="ps0.hlsl">
       <Filter>shader</Filter>
     </FxCompile>
+    <FxCompile Include="vs_transform.hlsl">
+      <Filter>shader</Filter>
+    </FxCompile>
+    <FxCompile Include="ps_color.hlsl">
+      <Filter>shader</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
