--- a/dx11/dx11.vcxproj.filters
+++ b/dx11/dx11.vcxproj.filters
@@ -68,5 +68,8 @@
     <FxCompile Include="ps_color.hlsl">
       <Filter>shader</Filter>
     </FxCompile>
+    <FxCompile Include="vs_light.hlsl">
+      <Filter>shader</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
