--- a/dx11/dx11.vcxproj
+++ b/dx11/dx11.vcxproj
@@ -165,12 +165,16 @@
     <ClCompile Include="dx11_example.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Rehenz\fps_counter.cpp" />
+    <ClCompile Include="Rehenz\math.cpp" />
+    <ClCompile Include="Rehenz\mesh.cpp" />
     <ClCompile Include="Rehenz\window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="dx11.h" />
     <ClInclude Include="input.h" />
     <ClInclude Include="Rehenz\fps_counter.h" />
+    <ClInclude Include="Rehenz\math.h" />
+    <ClInclude Include="Rehenz\mesh.h" />
     <ClInclude Include="Rehenz\type.h" />
     <ClInclude Include="Rehenz\window.h" />
   </ItemGroup>
