--- a/dx12/dx12.vcxproj.filters
+++ b/dx12/dx12.vcxproj.filters
@@ -22,6 +22,9 @@
     <ClCompile Include="main.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="dx12.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="dx12.h">
