--- a/dx12/dx12.vcxproj
+++ b/dx12/dx12.vcxproj
@@ -97,7 +97,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>user32.lib;d3d12.lib;dxgi.lib</AdditionalDependencies>
+      <AdditionalDependencies>user32.lib;d3d12.lib;dxgi.lib;winmm.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -115,7 +115,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>user32.lib;d3d12.lib;dxgi.lib</AdditionalDependencies>
+      <AdditionalDependencies>user32.lib;d3d12.lib;dxgi.lib;winmm.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -129,7 +129,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>user32.lib;d3d12.lib;dxgi.lib</AdditionalDependencies>
+      <AdditionalDependencies>user32.lib;d3d12.lib;dxgi.lib;winmm.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -147,15 +147,26 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>user32.lib;d3d12.lib;dxgi.lib</AdditionalDependencies>
+      <AdditionalDependencies>user32.lib;d3d12.lib;dxgi.lib;winmm.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="dx12.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Rehenz\fps_counter.cpp" />
+    <ClCompile Include="Rehenz\input.cpp" />
+    <ClCompile Include="rehenz\math.cpp" />
+    <ClCompile Include="Rehenz\window.cpp" />
+    <ClCompile Include="Rehenz\window_fc.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="dx12.h" />
+    <ClInclude Include="Rehenz\fps_counter.h" />
+    <ClInclude Include="Rehenz\input.h" />
+    <ClInclude Include="rehenz\math.h" />
+    <ClInclude Include="Rehenz\type.h" />
+    <ClInclude Include="Rehenz\window.h" />
+    <ClInclude Include="Rehenz\window_fc.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
