--- a/dx12/dx12.vcxproj
+++ b/dx12/dx12.vcxproj
@@ -153,18 +153,27 @@
   <ItemGroup>
     <ClCompile Include="dx12.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Rehenz\clipper.cpp" />
+    <ClCompile Include="Rehenz\drawer.cpp" />
     <ClCompile Include="Rehenz\fps_counter.cpp" />
     <ClCompile Include="Rehenz\input.cpp" />
     <ClCompile Include="rehenz\math.cpp" />
+    <ClCompile Include="Rehenz\mesh.cpp" />
+    <ClCompile Include="Rehenz\render_soft.cpp" />
     <ClCompile Include="Rehenz\window.cpp" />
     <ClCompile Include="Rehenz\window_fc.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="dx12.h" />
+    <ClInclude Include="Rehenz\clipper.h" />
+    <ClInclude Include="Rehenz\drawer.h" />
     <ClInclude Include="Rehenz\fps_counter.h" />
     <ClInclude Include="Rehenz\input.h" />
     <ClInclude Include="rehenz\math.h" />
+    <ClInclude Include="Rehenz\mesh.h" />
+    <ClInclude Include="Rehenz\render_soft.h" />
     <ClInclude Include="Rehenz\type.h" />
+    <ClInclude Include="Rehenz\util.h" />
     <ClInclude Include="Rehenz\window.h" />
     <ClInclude Include="Rehenz\window_fc.h" />
   </ItemGroup>
