draw first basic cube in dx12

--- a/dx12/dx12.vcxproj.filters
+++ b/dx12/dx12.vcxproj.filters
@@ -94,4 +94,12 @@
       <Filter>Rehenz</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="dx12_vs_transform.hlsl">
+      <Filter>shader</Filter>
+    </FxCompile>
+    <FxCompile Include="dx12_ps_color.hlsl">
+      <Filter>shader</Filter>
+    </FxCompile>
+  </ItemGroup>
 </Project>
