--- a/dx12/dx12.vcxproj.filters
+++ b/dx12/dx12.vcxproj.filters
@@ -118,10 +118,13 @@
     <None Include="blinn_phong.hlsli">
       <Filter>shader</Filter>
     </None>
-    <None Include="registers.hlsli">
+    <None Include="cbuffers.hlsli">
       <Filter>shader</Filter>
     </None>
     <None Include="structs.hlsli">
+      <Filter>shader</Filter>
+    </None>
+    <None Include="samplers.hlsli">
       <Filter>shader</Filter>
     </None>
   </ItemGroup>
