--- a/dx12/dx12.vcxproj.filters
+++ b/dx12/dx12.vcxproj.filters
@@ -113,6 +113,9 @@
     <FxCompile Include="dx12_ps_light_tex1.hlsl">
       <Filter>shader</Filter>
     </FxCompile>
+    <FxCompile Include="dx12_ps_mat.hlsl">
+      <Filter>shader</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="blinn_phong.hlsli">
